# RVVAutoVectorize

./: CMakeLists.txt  README.md  build.sh  test.sh
src/: RVVVectorize.cpp  runtime.c
tests/: matmul.c
